# notebook-grader

./: README.md  pyproject.toml
notebook_grader/: __init__.py  cli.py  core.py  evaluate_notebook.py  grade_notebook.py  rate_notebook.py
notebook_grader/templates/: evaluate_system_prompt.txt  rate_system_prompt.txt  system_prompt.txt
