[project]
name = "notebook-grader"
version = "0.1.13"
description = "Command-line and Python interface for grading Python notebooks"
authors = [
    {name = "Jeremy Magland"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0"
]
[project.urls]
Repository = "https://github.com/magland/notebook-grader"

[project.scripts]
notebook-grader = "notebook_grader.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebook_grader"]
